feat: add users filterOptions endpoint for roles and stores filters
